fix confirm ui bug and add custom scrollbar

--- a/styles.css
+++ b/styles.css
@@ -413,7 +413,7 @@ input {
     border-radius: 10px;
     border: 1px solid #ffcf9d;
     text-transform: uppercase;
-    color: #3d00ff;
+    color: #ff8000;
 }
 
 input:focus {
@@ -620,6 +620,15 @@ button {
     align-items: center;
     height: 100%;
     text-align: center;
+}
+
+.inline-flex-between {
+    display: inline-flex;
+    justify-content: space-between;
+}
+
+.flex-1 {
+    flex: 1
 }
 
 .hidden {
@@ -1500,4 +1509,30 @@ hr {
 }
 .shell-shape-4 {
     border-radius: 50% 50% 10% 10%;
+}
+
+/* scrollbar */
+::-webkit-scrollbar {
+    width: 7px;
+    background-color: transparent;
+}
+::-webkit-scrollbar-track {
+    background: rgba(255, 255, 255, 0.5);
+    border-left: 1px solid #ff840080;
+    /* background: white; */
+    /* background: linear-gradient(90deg, rgb(255, 181, 97), rgba(255, 255, 255, 0.521)); */
+}
+::-webkit-scrollbar-thumb {
+    /* background: repeating-linear-gradient(
+        #ffffff00 5px, 
+        #ff8300 7px,
+        #ff8300 9px
+        ); */
+    background: #ff8300;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    /* background: linear-gradient(90deg, #ff931f, #ff8300); */
+}
+::-webkit-scrollbar-thumb:hover {
+    background: #ff5622a9;
 }
